[FIX] knowledge: improve dropdown menus usability
Currently, there are two issues with the dropdown menus of Knowledge that
makes them unusable on mobile devices:
- The first issue is that the dropdown menus are not responsive and can
  go off screen. To fix that, we will force the dropdown menu to have a
  maximal width of 100vw and we will automatically truncate the text of
  the share dropdown menu to ensure that it will never overflow the
  parent container.
- The second issue is that the dropdown menus can go under the editor
  toolbar of the editor which makes some dropdown items unreachable.
  To fix that, we will update the z-index of the dropdown menus to
  ensure that it will always appear above the editor toolbar.

task-2867059

Part-of: odoo/enterprise#37029

--- a/knowledge/static/src/scss/knowledge_views.scss
+++ b/knowledge/static/src/scss/knowledge_views.scss
@@ -242,6 +242,10 @@
             color: $gray-400 !important;
         }
     }
+    .dropdown-menu.o_knowledge_more_options_panel,
+    .dropdown-menu.o_knowledge_share_panel {
+        max-width: 100vw;
+    }
 
     .o_knowledge_properties {
         min-width: 250px;
